2006-04-30  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: |Traversal.dis| is added.

	* Traversal.dis: New module.

	* TreeCore.dis (___report_error): Return value was
	not propagated.

2006-04-29  Wakaba  <wakaba@suika.fam.cx>

	* Element.dis (removeAttributeNS): A runtime error
	was occurred if there was no specified attribute node.

	* TreeCore.dis (manakaiLanguage): New attribute.

2006-04-28  Wakaba  <wakaba@suika.fam.cx>

	* TreeCore.dis (NodeList.manakaiReadOnly, NamedNodeMap.manakaiReadOnly):
	New attributes.

	(StaticNodeList): New interface.

2006-04-24  Wakaba  <wakaba@suika.fam.cx>

	* DOMCore.dis (c:SET_TO_NULL_ERR): New error code.

2006-04-22  Wakaba  <wakaba@suika.fam.cx>

	* SimpleLS.dis: Reimplemented.

2006-04-22  Wakaba  <wakaba@suika.fam.cx>

	* DOMCore.dis (NO_MODIFICATION_ALLOWED_ERR): It is now
	a qualified name.
	(tc:EXTERNAL_NODE_COMPARISON_ERR): New error type.

	* TreeCore.dis (compareDocumentPosition): Implemented. 
	(normalize): Implemented.
	(STORESIZE, CLEAR): Were not implemented for |EmptyNodeList|
	class.

2006-04-16  Wakaba  <wakaba@suika.fam.cx>

	* DOMCore.dis (OUT_OF_BOUND_ERR, NEGATIVE_INDEX_ERR): Removed.

2006-04-16  Wakaba  <wakaba@suika.fam.cx>

	* CharacterData.dis (length, insertData, substringData, 
	appendData, deleteData, replaceData, splitText): Reimplemented.

	* DOMCore.dis (NEGATIVE_LENGTH_ERR): New error.
	(c:index): The definition was missing.
	(c:length): New property.

2006-04-16  Wakaba  <wakaba@suika.fam.cx>

	* XMLParser.dis (close): Invoke |close| method
	rather than |close| function.

2006-04-16  Wakaba  <wakaba@suika.fam.cx>

	* CharacterData.dis: New module split from |TreeCore.dis|.

	* CharacterData.pm: Added to the CVS repository.

	* TreeCore.dis: The |CharacterData|, |Text|, and |Comment|
	interfaces are removed.
	(Require): A reference to the |MDOM:CharacterData| module
	is added.

	* DOMMain.dis (StringExtended, StringOutOfBoundsException): Removed.
