@@ -1,6 +1,6 @@
 #!/usr/bin/perl 
 ## This file is automatically generated
-## 	at 2006-04-16T12:54:40+00:00,
+## 	at 2006-04-30T08:38:31+00:00,
 ## 	from file "CharacterData.dis",
 ## 	module <http://suika.fam.cx/~wakaba/archive/2004/8/18/manakai-dom#ManakaiDOM.CharacterData>,
 ## 	for <http://suika.fam.cx/~wakaba/archive/2004/8/18/manakai-dom#ManakaiDOMLatest>.
@@ -10,11 +10,11 @@ require Message::DOM::DOMCore;
 require Message::DOM::TreeCore;
 require Message::Util::Error::DOMException;
 package Message::DOM::CharacterData;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 package Message::DOM::IFLatest::CharacterData;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 package Message::DOM::CharacterData::ManakaiDOMCharacterData;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 push our @ISA, 'Message::DOM::TreeCore::ManakaiDOMNode',
 'Message::DOM::IF::CharacterData',
 'Message::DOM::IF::Node',
@@ -962,9 +962,9 @@ $Message::Util::Grove::ClassProp{q<Message::DOM::CharacterData::ManakaiDOMCharac
 'w0',
 ['od']};
 package Message::DOM::IFLatest::Text;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 package Message::DOM::CharacterData::ManakaiDOMText;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 push our @ISA, 'Message::DOM::CharacterData::ManakaiDOMCharacterData',
 'Message::DOM::IF::CharacterData',
 'Message::DOM::IF::Node',
@@ -1169,7 +1169,107 @@ $self->{
 }
 sub whole_text ($;$) {
 if (@_ == 1) {my ($self) = @_;
-report Message::Util::Error::DOMException::CoreException -object => $self, '-type' => 'NOT_SUPPORTED_ERR', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#on' => 'get', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#subtype' => 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#MDOM_IMPL_ATTR_NOT_IMPLEMENTED', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#class' => 'Message::DOM::CharacterData::ManakaiDOMText', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#attr' => 'whole_text';
+my $r = '';
+
+{
+
+
+{
+
+local $Error::Depth = $Error::Depth + 1;
+
+{
+
+
+  require 
+Message::DOM::Traversal;
+  my $doc = $self->
+owner_document
+;
+  my $doctrv = $doc->
+get_feature
+ (Traversal => '2.0');
+  my $tw1 = $doctrv->
+create_tree_walker
+
+                       ($doc, 
+'4294967295'
+, sub {
+                         ($_[1]->
+node_type
+
+                              == 
+'5'
+)
+                           ? 
+'3'
+                           : 
+
+'1'
+
+                       }, 
+1
+);
+  $tw1->
+current_node
+ ($self);
+  my $tw2 = $tw1->clone;
+  $r = $self->
+node_value
+;
+
+  S: while (defined (my $node = $tw1->
+previous_sibling
+)) {
+    my $nt = $node->
+node_type
+;
+    if ($nt == 
+'3' or
+        
+$nt == 
+'4'
+) {
+      $r = $node->
+node_value
+ . $r;
+    } else {
+      last S;
+    }
+  } # S
+
+  S: while (defined (my $node = $tw2->
+next_sibling
+)) {
+    my $nt = $node->
+node_type
+;
+    if ($nt == 
+'3' or
+        
+$nt == 
+'4'
+) {
+      $r .= $node->
+node_value
+;
+    } else {
+      last S;
+    }
+  } # S
+
+
+
+}
+
+
+;}
+
+;
+
+
+}
+$r;
 } else {my ($self) = @_;
 report Message::Util::Error::DOMException::CoreException -object => $self, '-type' => 'NO_MODIFICATION_ALLOWED_ERR', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#on' => 'get', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#subtype' => 'http://suika.fam.cx/~wakaba/archive/2005/manakai/Util/Error/DOMException#READ_ONLY_ATTRIBUTE_ERR', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#class' => 'Message::DOM::CharacterData::ManakaiDOMText', 'http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#attr' => 'whole_text';
 }
@@ -1312,9 +1412,9 @@ $Message::Util::Grove::ClassProp{q<Message::DOM::CharacterData::ManakaiDOMText>}
 'w0',
 ['od']};
 package Message::DOM::IFLatest::Comment;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 package Message::DOM::CharacterData::ManakaiDOMComment;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 push our @ISA, 'Message::DOM::CharacterData::ManakaiDOMCharacterData',
 'Message::DOM::IF::CharacterData',
 'Message::DOM::IF::Comment',
@@ -1483,7 +1583,7 @@ $Message::Util::Grove::ClassProp{q<Message::DOM::CharacterData::ManakaiDOMCommen
 'w0',
 ['od']};
 package Message::DOM::IFLatest::StringExtended;
-our $VERSION = 20060416.1254;
+our $VERSION = 20060430.0838;
 for ($Message::DOM::IF::CharacterData::, $Message::DOM::IF::Comment::, $Message::DOM::IF::Node::, $Message::DOM::IF::Text::, $Message::DOM::IFLatest::Node::, $Message::DOM::IFLevel1::CharacterData::, $Message::DOM::IFLevel1::Comment::, $Message::DOM::IFLevel1::Node::, $Message::DOM::IFLevel1::Text::, $Message::DOM::IFLevel2::CharacterData::, $Message::DOM::IFLevel2::Comment::, $Message::DOM::IFLevel2::Node::, $Message::DOM::IFLevel2::Text::, $Message::DOM::IFLevel3::CharacterData::, $Message::DOM::IFLevel3::Comment::, $Message::DOM::IFLevel3::Node::, $Message::DOM::IFLevel3::Text::){}
 ## License: <http://suika.fam.cx/~wakaba/archive/2004/8/18/license#Perl+MPL>
 1;
