@@ -1,5 +1,11 @@
 2006-04-30  Wakaba  <wakaba@suika.fam.cx>
 
+	* CharacterData.dis (Require): A reference to 
+	the |MDOM:Traversal| module is added.
+	(wholeText): Implemented.
+
+2006-04-30  Wakaba  <wakaba@suika.fam.cx>
+
 	* Makefile: |Traversal.dis| is added.
 
 	* Traversal.dis: New module.
